deps/v8/test/message/paren_in_arg_string.out
*%(basename)s:29: SyntaxError: Function arg string contains parenthesis
var paren_in_arg_string_bad = new Function(')', 'return;');
                              ^
SyntaxError: Function arg string contains parenthesis
    at Function (native)
    at *%(basename)s:29:31
